Fix the OutPoint displayed in TransactionDetails to automatically wrap to a new line
Fix #182

--- a/frontend/src/app/transaction/transaction.page.scss
+++ b/frontend/src/app/transaction/transaction.page.scss
@@ -98,6 +98,8 @@ ion-content {
 
 .text-wrap {
   word-break: break-all;
+  overflow-wrap: anywhere;
+  white-space: normal;
 }
 
 .display-none-min-lg {
